# WiserHomeCLI

./: CMakeLists.txt  README.md  RestApiClient.cpp  RestApiClient.h  httplib.h  main.cpp
